githubのキャッシュ強すぎるだろ...

--- a/editor/index.html
+++ b/editor/index.html
@@ -35,7 +35,8 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
 
     <!-- メインロジック -->
-    <script src="./main.js?v=260106" defer></script>
+    <script src="./main.js?v=2601061" defer></script>
 
 </body>
 </html>
+
