index.jsのキャッシュがまだ残っている件について

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="index.js?v=260106"></script>
 </body>
 </html>
+
