--- a/editor/index.html
+++ b/editor/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Akito IDE β260106</title>
+    <title>AstraPy Editor</title>
     <link rel="stylesheet" href="style.css?v=260106">
 </head>
 <body>
@@ -39,4 +39,5 @@
 
 </body>
 </html>
+
 
