九日にコミットする260106の最終版

--- a/editor/index.html
+++ b/editor/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AstraPy Editor</title>
+    <link rel="icon" href="../favicon.ico">
     <link rel="stylesheet" href="style.css?v=260106">
 </head>
 <body>
@@ -35,9 +36,7 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
 
     <!-- メインロジック -->
-    <script src="./main.js?v=2601061" defer></script>
+    <script src="./main.js?v=260108" defer></script>
 
 </body>
 </html>
-
-
