--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>AstraPy – NexFlow Project</title>
+
+    <!-- favicon -->
+    <link rel="icon" href="favicon.ico">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -11,6 +16,10 @@
     <canvas id="starfield"></canvas>
 
     <div id="content">
+
+        <!-- ★ 大きな AstraPy ロゴ -->
+        <img src="astrapy_icon.png" alt="AstraPy Logo" class="big-logo">
+
         <h1 class="title">AstraPy</h1>
         <p class="subtitle">The First Star of NexFlow</p>
 
@@ -50,4 +59,3 @@
     <script src="index.js?v=260106"></script>
 </body>
 </html>
-
